Fix npe (#46)
* Fix npe

* Add push notification default

* Fix npe

* Fix npe

* Fix guide

* Fix required option