@@ -12,13 +12,12 @@ import com.nexters.gaetteok.persistence.repository.CommentRepository;
 import com.nexters.gaetteok.persistence.repository.ReactionRepository;
 import com.nexters.gaetteok.persistence.repository.WalkLogRepository;
 import jakarta.persistence.EntityManager;
+import java.io.IOException;
+import java.util.Collections;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
-
-import java.io.IOException;
-import java.util.Collections;
 
 @Service
 @RequiredArgsConstructor
@@ -32,8 +31,10 @@ public class AdminApplication {
     private final ReactionRepository reactionRepository;
 
     @Transactional
-    public void createWalkLogs(CreateWalkLogAdminRequest request, MultipartFile photo) throws IOException {
-        File file = imageUploader.uploadFiles(Collections.singletonList(photo), "admin/walk-log/images").getFirst();
+    public void createWalkLogs(CreateWalkLogAdminRequest request, MultipartFile photo)
+        throws IOException {
+        File file = imageUploader.uploadFiles(
+            Collections.singletonList(photo), "admin/walk-log/images").get(0);
 
         WalkLogEntity entity = walkLogRepository.save(WalkLogEntity.builder()
             .photoUrl(file.getUploadFileUrl())
@@ -44,7 +45,8 @@ public class AdminApplication {
             .build());
 
         // JPA가 직접 관리하는 createdAt 필드를 수정하기 위해 쿼리를 직접 실행
-        entityManager.createQuery("UPDATE WalkLogEntity w SET w.createdAt = :createdAt WHERE w.id = :id")
+        entityManager.createQuery(
+                "UPDATE WalkLogEntity w SET w.createdAt = :createdAt WHERE w.id = :id")
             .setParameter("createdAt", request.getCreatedAt())
             .setParameter("id", entity.getId())
             .executeUpdate();
@@ -59,7 +61,8 @@ public class AdminApplication {
             .build());
 
         // JPA가 직접 관리하는 createdAt 필드를 수정하기 위해 쿼리를 직접 실행
-        entityManager.createQuery("UPDATE CommentEntity c SET c.createdAt = :createdAt WHERE c.id = :id")
+        entityManager.createQuery(
+                "UPDATE CommentEntity c SET c.createdAt = :createdAt WHERE c.id = :id")
             .setParameter("createdAt", request.getCreatedAt())
             .setParameter("id", entity.getId())
             .executeUpdate();
@@ -74,7 +77,8 @@ public class AdminApplication {
             .build());
 
         // JPA가 직접 관리하는 createdAt 필드를 수정하기 위해 쿼리를 직접 실행
-        entityManager.createQuery("UPDATE ReactionEntity r SET r.createdAt = :createdAt WHERE r.id = :id")
+        entityManager.createQuery(
+                "UPDATE ReactionEntity r SET r.createdAt = :createdAt WHERE r.id = :id")
             .setParameter("createdAt", request.getCreatedAt())
             .setParameter("id", entity.getId())
             .executeUpdate();
